<resources>
    <string name="app_name">final-am-acn4a-kitagawa</string>

    <!-- Login -->
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>


    <!-- Registro -->
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="default_sex">Indique su sexo</string>
    <string name="cuenta">Ya tengo cuenta</string>
    <string-array name="sex_options">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <!-- Menu principal -->
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="nueva_reserva">Nueva reserva</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombreprincipal"> -- </string>

    <!-- Nueva Reserva -->
    <string name="la_parolaccia">La Parolaccia</string>
    <string name="la_bistecca">La Bistecca</string>
    <string name="gourmet_porteno">Gourmet Porteño</string>
    <string name="hardrock">Hardrock</string>
    <string name="seleccion">Seleccione el restaurante</string>


</resources>