<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja"
    tools:context=".MenuPrincipal">



  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="5dp"
      android:gravity="center">

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginStart="1dp"
          android:layout_marginEnd="1dp"
          android:gravity="center"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0">


          <TextView
              android:id="@+id/textView"
              android:background="@drawable/rounded_background_rojo"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="Resres"
              android:textAlignment="center"
              android:textColor="@color/negro"
              android:textSize="34sp"
              android:textStyle="bold" />
      </LinearLayout>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="120dp"
      app:cardBackgroundColor="@color/naranja"
      app:cardUseCompatPadding="true"
      android:padding="0.2dp"
      app:cardCornerRadius="5dp">



      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/marron"
          android:padding="10dp"
          android:orientation="vertical">

        <TextView
            android:text="@string/bienvenido"
            android:textColor="@color/negro"
            android:textStyle="normal|bold"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

      <ProgressBar
          android:id="@+id/progressBarDatos"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textStyle="normal|bold"
          android:layout_marginTop="10dp"
          android:layout_gravity="center"
          />


        <TextView
            android:id="@+id/nombreprincipal"
            android:text="@string/nombreprincipal"
            android:textColor="@color/negro"
            android:visibility="gone"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center_horizontal"
          android:background="@color/naranja">

          <ImageView
              android:id="@+id/logoImage"
              android:layout_width="95dp"
              android:layout_height="190dp"
              android:contentDescription="Logo de la app"
              android:src="@drawable/menu"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/header" />


          <Button
              android:id="@+id/mis_reservas"
              android:text="@string/mis_reservas"
              android:textStyle="normal|bold"
              android:textColor="@color/negro"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:paddingVertical="15dp"
              android:backgroundTint="@color/amarillo"
              android:onClick="OpenMisReservas" />

          <Button
              android:id="@+id/nueva_reserva"
              android:text="@string/nueva_reserva"
              android:textStyle="normal|bold"
              android:textColor="@color/negro"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:paddingVertical="15dp"
              android:backgroundTint="@color/amarillo"
              android:onClick="OpenReservaActivity" />

          <Button
              android:id="@+id/CerrarSesion"
              android:text="@string/CerrarSesion"
              android:textStyle="normal|bold"
              android:textColor="@color/negro"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingVertical="15dp"
              android:backgroundTint="@color/amarillo" />

      </LinearLayout>

   </androidx.appcompat.widget.LinearLayoutCompat>

  </ScrollView>