<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja"
    tools:context=".NuevaReserva">

  <!-- Header -->
  <LinearLayout
      android:id="@+id/header"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        android:background="@drawable/rounded_background_rojo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Resres"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="34sp"
        android:textStyle="bold" />
  </LinearLayout>

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@+id/header"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="visible">

      <TextView
          android:layout_width="360dp"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:autoSizeTextType="uniform"
          android:background="@drawable/rounded_background"
          android:text="@string/seleccion"
          android:textAlignment="center"
          android:textColor="@color/negro"
          android:textSize="24sp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen1"
            android:layout_width="369dp"
            android:layout_height="275dp"
            android:src="@drawable/la_parolaccia" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_background_rojo"
            android:text="@string/la_parolaccia"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen2"
            android:layout_width="369dp"
            android:layout_height="275dp"
            android:src="@drawable/bistecca" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_background_rojo"
            android:text="@string/la_bistecca"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen3"
            android:layout_width="369dp"
            android:layout_height="275dp"
            android:src="@drawable/gourmetporteno" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_background_rojo"
            android:text="@string/gourmet_porteno"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen4"
            android:layout_width="369dp"
            android:layout_height="275dp"
            android:src="@drawable/hardrock" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_background_rojo"
            android:text="@string/hardrock"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="20dp"
          android:gravity="center"
          android:orientation="vertical">

        <Button
            android:id="@+id/botonRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:layout_marginTop="16dp"
            android:textColor="@color/negro"
            android:onClick="volverAMain"
            android:text="Volver a la pagina anterior" />

      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
